manifests/production/paperless-ngx/apps_v1_deployment_paperless-ngx-gotenberg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: gotenberg
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/name: paperless-ngx-gotenberg
    app.kubernetes.io/part-of: paperless-ngx
  name: paperless-ngx-gotenberg
  namespace: paperless-ngx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: gotenberg
      app.kubernetes.io/instance: paperless-ngx
      app.kubernetes.io/name: paperless-ngx-gotenberg
      app.kubernetes.io/part-of: paperless-ngx
  template:
    metadata:
      labels:
        app.kubernetes.io/component: gotenberg
        app.kubernetes.io/instance: paperless-ngx
        app.kubernetes.io/name: paperless-ngx-gotenberg
        app.kubernetes.io/part-of: paperless-ngx
    spec:
      containers:
      - command:
        - gotenberg
        - --chromium-disable-javascript=true
        - --chromium-allow-list=file:///tmp/.*
        image: docker.io/gotenberg/gotenberg:8.33.0@sha256:bddd8ea9d076e2d08b6ddaa6efae6403185202c6dab65a6488ed0a6923d6d8e8
        name: gotenberg
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 1001
          runAsUser: 1001
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
