manifests/production/paperless-ngx/apps_v1_deployment_paperless-ngx-tika.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: tika
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/name: paperless-ngx-tika
    app.kubernetes.io/part-of: paperless-ngx
  name: paperless-ngx-tika
  namespace: paperless-ngx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: tika
      app.kubernetes.io/instance: paperless-ngx
      app.kubernetes.io/name: paperless-ngx-tika
      app.kubernetes.io/part-of: paperless-ngx
  template:
    metadata:
      labels:
        app.kubernetes.io/component: tika
        app.kubernetes.io/instance: paperless-ngx
        app.kubernetes.io/name: paperless-ngx-tika
        app.kubernetes.io/part-of: paperless-ngx
    spec:
      containers:
      - image: docker.io/apache/tika:3.3.0.0@sha256:2a565f1ea1290bdcb74a7d35957d16a989ed44ef98790dcdcc28121d728fa583
        name: tika
        readinessProbe:
          httpGet:
            port: 9998
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
