manifests/production/paperless-ngx/apps_v1_deployment_paperless-ngx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: paperless-ngx
      app.kubernetes.io/instance: paperless-ngx
      app.kubernetes.io/name: paperless-ngx
      app.kubernetes.io/part-of: paperless-ngx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: paperless-ngx
        app.kubernetes.io/instance: paperless-ngx
        app.kubernetes.io/name: paperless-ngx
        app.kubernetes.io/part-of: paperless-ngx
    spec:
      containers:
      - env:
        - name: PAPERLESS_CONSUMER_POLLING
          value: "5"
        - name: S6_YES_I_WANT_A_WORLD_WRITABLE_RUN_BECAUSE_KUBERNETES
          value: "1"
        - name: PAPERLESS_DBHOST
          valueFrom:
            secretKeyRef:
              key: host
              name: paperless-ngx-db-app
        - name: PAPERLESS_DBPORT
          valueFrom:
            secretKeyRef:
              key: port
              name: paperless-ngx-db-app
        - name: PAPERLESS_DBNAME
          valueFrom:
            secretKeyRef:
              key: dbname
              name: paperless-ngx-db-app
        - name: PAPERLESS_DBUSER
          valueFrom:
            secretKeyRef:
              key: username
              name: paperless-ngx-db-app
        - name: PAPERLESS_DBPASS
          valueFrom:
            secretKeyRef:
              key: password
              name: paperless-ngx-db-app
        image: ghcr.io/paperless-ngx/paperless-ngx:2.20.15@sha256:6c86cad803970ea782683a8e80e7403444c5bf3cf70de63b4d3c8e87500db92f
        name: paperless-ngx
        ports:
        - containerPort: 8000
          protocol: TCP
        readinessProbe:
          httpGet:
            port: 8000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 1000
          runAsUser: 1000
        volumeMounts:
        - mountPath: /usr/src/paperless/consume
          name: consume
        - mountPath: /run
          name: run
        - mountPath: /usr/src/paperless/data
          name: data
        - mountPath: /usr/src/paperless/media
          name: media
        - mountPath: /bundle.pem
          name: ca-bundle
          subPath: bundle.pem
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: consume
        persistentVolumeClaim:
          claimName: paperless-ngx-consume
      - emptyDir: {}
        name: run
      - name: data
        persistentVolumeClaim:
          claimName: paperless-ngx-data
      - name: media
        persistentVolumeClaim:
          claimName: paperless-ngx-media
      - configMap:
          name: paperless-ngx-cluster-ca
        name: ca-bundle
